Thu Nov 12 12:12:51 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/AMH_Exceptions/run_test.pl:
        * tests/AMI_Timeouts/run_test.pl:
        * tests/Portable_Interceptors/AdvSlot/run_test.pl:
        * tests/Portable_Interceptors/AdvSlotDblCpy/run_test.pl:
        * tests/Portable_Interceptors/Bug_2133/run_test.pl:
        * tests/Portable_Interceptors/Bug_3080/run_test.pl:
        * tests/Portable_Interceptors/Bug_3582/run_test.pl:
          Fixed fuzz

Thu Nov 12 08:24:00 UTC 2009  Denis Budko <denis.budko@remedy.nl>

        * tests/IORManipulation/filter/run_test.pl
        * tests/Connection_Failure/run_test.pl
        * orbsvcs/DevGuideExamples/NamingService/Naming_Server/run_test.pl
        * orbsvcs/tests/unit/Notify/MC/Statistic/run_test.pl
        * orbsvcs/tests/unit/Notify/MC/Statistic_Registry/run_test.pl
        * orbsvcs/tests/unit/Notify/MC/MonitorControlExt/run_test.pl
        * orbsvcs/tests/unit/Notify/MC/NotificationServiceMonitor/run_test.pl
        * orbsvcs/tests/unit/Notify/MC/Control/run_test.pl
        * orbsvcs/tests/unit/Trading/Interpreter/run_test.pl
        * orbsvcs/tests/Bug_2074_Regression/run_test.pl
        * tests/GIOP_Fragments/PMB_With_Fragments/run_test.pl
        * performance-tests/Latency/Collocation/run_test.pl
        * performance-tests/POA/Object_Creation_And_Registration/run_test.pl
        * orbsvcs/tests/Bug_2377_Regression/run_test.pl
        * orbsvcs/tests/Bug_2377_Regression/run_test_ipv6.pl
        * orbsvcs/tests/unit/Notify/MC/MonitorManager/run_test.pl
        Fixed fuzz errors and some time interval functions usage.

Thu Nov 12 07:13:51 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/PortableInterceptors/AdvSlot/run_test.pl
        * tests/PortableInterceptors/AdvSlotDblCpy/run_test.pl
        * tests/PortableInterceptors/Bug_2133/run_test.pl
        * tests/PortableInterceptors/Bug_2510_Regression/run_test.pl