@@ -1,3 +1,10 @@
+Thu Nov 12 20:39:18 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * TAO_IDL/be/be_interface.cpp:
+        
+          Fixed bug in the logic of operation table generation for
+          components and homes. 
+
 Thu Nov 12 12:12:51 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/AMH_Exceptions/run_test.pl:
